--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -313,6 +313,7 @@ header .nav-container {
       justify-content: space-between;
       align-items: center;
       margin-top: auto;
+      margin-bottom: 1rem;
       border-top: solid 1px #f1f0e9;
 
       & > * {
